<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient"
    android:padding="40dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/inputEmail"
        android:focusableInTouchMode="true"
        android:hint="Email"
        android:textColor="#E8E8E8"
        android:backgroundTint="@color/buttonLogin"
        android:textColorHint="@color/buttonLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:id="@+id/inputPassword"
        android:hint="Password"
        android:textColor="#E8E8E8"
        android:backgroundTint="@color/buttonLogin"
        android:textColorHint="@color/buttonLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnForgotPassword"
        android:id="@+id/btnForgotPassword"
        android:layout_gravity="center"
        android:background="@null"
        android:textAllCaps="false"
        android:textColor="@color/buttonLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:radius="1000dp"
        android:textAllCaps="false"
        android:textColor="#37ecba"
        android:textSize="20sp"
        android:background="@drawable/btn_login"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForgotPassword"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:id="@+id/orLayout"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="true"
            android:text="or connect with"
            android:textColor="@color/buttonLogin"
            android:textSize="10sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toLeftOf="@id/orText"
            android:background="@color/buttonLogin"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/orText"
            android:background="@color/buttonLogin"
            />

    </RelativeLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:radius="1000dp"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@drawable/btn_facebook"
        android:text="@string/facebookLogin"
        android:id="@+id/btnFacebookLogin"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orLayout"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp_action"
        android:id="@+id/btnSignUpActivity"
        android:layout_gravity="center"
        android:background="@null"
        android:textAllCaps="false"
        android:textColor="@color/buttonLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />



</android.support.constraint.ConstraintLayout>